# hapigo-clone

./: .gitignore  MANUAL_ACCEPTANCE.md  PRODUCT_PLAN.md  findings.md  index.html  package-lock.json  package.json  progress.md  task_plan.md
scripts/: cleanup-dmg-volume.sh
src/: App.tsx  styles.css  theme.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  selection.rs  translate.rs
src/components/: ResultList.tsx  SearchBox.tsx  TranslatePanel.tsx
